# RAG-Project-

./: .gitignore  README.md  init.bat  pyproject.toml  requirements.txt
data/text_files/: Machine_Learning_Basics.txt  python_intro.txt
data/vector_store/3802324a-96cd-40e9-96df-cf7e4f5cfbd9/: index_metadata.pickle
data/vector_store/fceb19d8-6b73-476d-952a-f21c2e976f5c/: index_metadata.pickle
notebook/: document.ipynb
