[project]
name = "Project"
version = "0.1.0"
description = "Research Paper RAG System"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "google-genai>=2.4.0",
    "google-generativeai>=0.8.6",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.37.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
]
